--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,8 @@
-No-space bindings: `a::b`
+Declarations: `a + b [a: 1; b: 2]`
 
 Strings
   Strings
     Test multi-line string inside of newline sensitive syntax
-  Block strings
   Escape sequences
   Interpolation: `"\(...)"`
   Raw strings: `#"..."`
@@ -15,4 +14,5 @@ Extra dots
   Ignore for convenience
   Or: deny for operators with dots (`..=`)
 
+Test for literals, words, symbols
 Test for each precedence combo
